creacion de footer, ajuste de json y css

--- a/FastFood-App/src/assets/translations/en.json
+++ b/FastFood-App/src/assets/translations/en.json
@@ -1,6 +1,6 @@
 {
     "menu.grill": "Grilled menu",
-    "big.menu.bacon": "Big menu The Queen bacon",
+    "big.menu.bacon": "Big menu The ff bacon",
     "big.menu": "Big menu",
     "big.menu.question": "Big?",
     "extra.bacon.cheese": "Extra bacon? Extra cheese?",
@@ -9,7 +9,7 @@
     "remove": "Remove",
     "extra": "Extra",
     "custom.order": "Customize your order",
-    "meat.phopper": "Phopper meat",
+    "meat.res": "res meat",
     "lettuce": "Lettuce",
     "crunchy.onion": "Onion crunchy",
     "mayonnaise": "Mayonnaise",
@@ -17,7 +17,7 @@
     "choose.complement": "Choose your complement",
     "big.potato.classic": "Big potato classic",
     "big.potato.supreme": "Big potato supreme",
-    "queen.onion.rings": "Queen onion rings",
+    "ff.onion.rings": "ff onion rings",
     "salad.individual": "Individual salad",
     "menu.tender.crunchy": "Menu tender and crunchy",
     "salad.more": "Salads",
@@ -25,8 +25,8 @@
     "complements": "Complements",
     "drink.coffe": "Drinks and coffe",
     "my.order": "My order",
-    "queen.big.egg": "Big menu The Queen egg",
-    "big.phopper": "Big menu Phopper",
+    "ff.big.egg": "Big menu The ff egg",
+    "big.res": "Big menu res",
     "cheese": "Cheese",
     "big.coca.cola.drink": "Big coca cola",
     "big.fanta.drink": "Big Fanta",
