--- a/FastFood-App/src/assets/translations/es.json
+++ b/FastFood-App/src/assets/translations/es.json
@@ -9,7 +9,7 @@
     "remove": "Quitar",
     "extra": "Extra",
     "custom.order": "Personaliza tu pedido",
-    "meat.phopper": "Carne de Res",
+    "meat.res": "Carne de Res",
     "lettuce": "Lechuga",
     "crunchy.onion": "Cebolla crujiente",
     "mayonnaise": "Mayonesa",
@@ -17,7 +17,7 @@
     "choose.complement": "Elige tu complemento",
     "big.potato.classic": "Papas clásicas grandes",
     "big.potato.supreme": "Papas Supremas grandes",
-    "queen.onion.rings": "Fast Food Aros de cebolla",
+    "ff.onion.rings": "Fast Food Aros de cebolla",
     "salad.individual": "Ensalada individual",
     "menu.tender.crunchy": "Menú tierno y crujiente",
     "salad.more": "Ensaladas",
@@ -25,8 +25,8 @@
     "complements": "Complementos",
     "drink.coffe": "Bebidas y cafes",
     "my.order": "Mi pedido",
-    "queen.big.egg": "The Fast Food huevo menú grande",
-    "big.phopper": "Hamburguesa Fast menú grande",
+    "ff.big.egg": "The Fast Food huevo menú grande",
+    "big.res": "Hamburguesa Fast menú grande",
     "cheese": "Queso",
     "big.coca.cola.drink": "Coca cola grande",
     "big.fanta.drink": "Fanta grande",
