creacion de la pagina de categorias

--- a/FastFood-App/src/assets/translations/en.json
+++ b/FastFood-App/src/assets/translations/en.json
@@ -1,5 +1,5 @@
 {
-    "menu.grill": "Grilled menu",
+    "menu.FastFood": "Grilled menu",
     "big.menu.bacon": "Big menu The ff bacon",
     "big.menu": "Big menu",
     "big.menu.question": "Big?",
@@ -20,10 +20,10 @@
     "ff.onion.rings": "ff onion rings",
     "salad.individual": "Individual salad",
     "menu.tender.crunchy": "Menu tender and crunchy",
-    "salad.more": "Salads",
+    "salad": "Salads",
     "desserts": "Desserts",
     "complements": "Complements",
-    "drink.coffe": "Drinks and coffe",
+    "drink.and.coffe": "Drinks and coffe",
     "my.order": "My order",
     "ff.big.egg": "Big menu The ff egg",
     "big.res": "Big menu res",
