--- a/FastFood-App/src/assets/translations/es.json
+++ b/FastFood-App/src/assets/translations/es.json
@@ -1,5 +1,5 @@
 {
-    "menu.grill": "Menús a la parrilla",
+    "menu.FastFood": "Menús a la parrilla",
     "big.menu.bacon": "The Fast Food menú grande",
     "big.menu": "Menú Grande",
     "big.menu.question": "¿Quieres agrandarlo?",
@@ -20,10 +20,10 @@
     "ff.onion.rings": "Fast Food Aros de cebolla",
     "salad.individual": "Ensalada individual",
     "menu.tender.crunchy": "Menú tierno y crujiente",
-    "salad.more": "Ensaladas",
+    "salad": "Ensaladas",
     "desserts": "Postres",
     "complements": "Complementos",
-    "drink.coffe": "Bebidas y cafes",
+    "drink.and.coffe": "Bebidas y cafes",
     "my.order": "Mi pedido",
     "ff.big.egg": "The Fast Food huevo menú grande",
     "big.res": "Hamburguesa Fast menú grande",
