ajuste de css para vista productos

--- a/FastFood-App/src/assets/translations/es.json
+++ b/FastFood-App/src/assets/translations/es.json
@@ -24,7 +24,7 @@
     "desserts": "Postres",
     "complements": "Complementos",
     "drink.and.coffe": "Bebidas y cafes",
-    "my.order": "Mi pedido",
+    "my.order": "Añadir pedido",
     "ff.big.egg": "The Fast Food huevo menú grande",
     "big.res": "Hamburguesa Fast menú grande",
     "cheese": "Queso",
