ajuste de valores

--- a/FastFood-App/src/assets/translations/es.json
+++ b/FastFood-App/src/assets/translations/es.json
@@ -1,7 +1,7 @@
 {
     "menu.FastFood": "Menús a la parrilla",
     "big.menu.bacon": "The Fast Food menú grande",
-    "big.menu": "Menú Grande",
+    "big.menu": "Agrandar menú",
     "big.menu.question": "¿Quieres agrandarlo?",
     "extra.bacon.cheese": "Tocineta extra? Queso extra?",
     "bacon": "Tocineta",
@@ -23,19 +23,19 @@
     "salad": "Ensaladas",
     "desserts": "Postres",
     "complements": "Complementos",
-    "drink.and.coffe": "Bebidas y cafes",
+    "drinks": "Bebidas",
     "my.order": "Añadir pedido",
-    "ff.big.egg": "The Fast Food huevo menú grande",
+    "ff.big.egg": "The Fast Food Sandwich",
     "big.res": "Hamburguesa Fast menú grande",
     "cheese": "Queso",
     "big.coca.cola.drink": "Coca cola grande",
-    "big.fanta.drink": "Fanta grande",
-    "big.fanta.limon.drink": "Fanta limón grande",
+    "big.pepsi.drink": "Pepsi grande",
+    "big.sprite.drink": "Sprite grande",
     "tomato": "Tomate",
-    "coffe": "Café",
-    "dessert.oreo": "Helado de oreo",
-    "dessert.kitkat": "Helado de kitkat",
-    "doritos.burguer": "Hamburguesa de doritos",
+    "coffe": "Tinto",
+    "dessert.strawberry-mal": "Malteada de Fresa",
+    "dessert.chocolate-mal": "Malteada de Chocolate",
+    "double.burguer": "Hamburguesa doble carne",
     "choose.drink": "Elija su bebida",
     "app": "Fast Food",
     "no.products": "No hay productos",
