--- a/FastFood-App/src/assets/translations/en.json
+++ b/FastFood-App/src/assets/translations/en.json
@@ -1,6 +1,6 @@
 {
     "menu.FastFood": "Grilled menu",
-    "big.menu.bacon": "Big menu The ff bacon",
+    "big.menu.bacon": "Big menu The Fast bacon",
     "big.menu": "Big menu",
     "big.menu.question": "Big?",
     "extra.bacon.cheese": "Extra bacon? Extra cheese?",
@@ -23,21 +23,21 @@
     "salad": "Salads",
     "desserts": "Desserts",
     "complements": "Complements",
-    "drink.and.coffe": "Drinks and coffe",
+    "drinks": "Drinks",
     "my.order": "My order",
-    "ff.big.egg": "Big menu The ff egg",
-    "big.res": "Big menu res",
+    "ff.big.egg": "Big menu The Fast egg",
+    "big.res": "Big menu Whooper",
     "cheese": "Cheese",
     "big.coca.cola.drink": "Big coca cola",
-    "big.fanta.drink": "Big Fanta",
-    "big.fanta.limon.drink": "Big lemon Fanta",
+    "big.pepsi.drink": "Big Pepsi",
+    "big.sprite.drink": "Big Sprite",
     "tomato": "Tomatoe",
     "coffe": "Coffe",
-    "dessert.oreo": "Oreo ice cream",
-    "dessert.kitkat": "Kitkat ice cream",
-    "doritos.burguer": "Doritos hamburguer",
+    "dessert.strawberry-mal": "Strawberry Milk shake",
+    "dessert.chocolate-mal": "Chocolate Milk shake",
+    "double.burguer": "Double Meal hamburguer",
     "choose.drink": "Choose your drink",
-    "app": "Burger Master",
+    "app": "Fast Food",
     "no.products": "There aren't products",
     "no.categories": "There aren't categories",
     "previous": "Previous",
