--- a/FastFood-App/src/assets/translations/en.json
+++ b/FastFood-App/src/assets/translations/en.json
@@ -24,7 +24,7 @@
     "desserts": "Desserts",
     "complements": "Complements",
     "drinks": "Drinks",
-    "my.order": "My order",
+    "my.order": "Made order",
     "ff.big.egg": "Big menu The Fast egg",
     "big.res": "Big menu Whooper",
     "cheese": "Cheese",
