--- a/FastFood-App/src/assets/translations/es.json
+++ b/FastFood-App/src/assets/translations/es.json
@@ -24,7 +24,7 @@
     "desserts": "Postres",
     "complements": "Complementos",
     "drinks": "Bebidas",
-    "my.order": "Añadir pedido",
+    "my.order": "Realizo tu pedido",
     "ff.big.egg": "The Fast Food Sandwich",
     "big.res": "Hamburguesa Fast menú grande",
     "cheese": "Queso",
